[package]
name = "tfb_toolset"
version = "0.1.0"
authors = ["Mike Smith", "Nate Brady"]
edition = "2018"

[dependencies]
colored = "1.9.3"
clap = "3.0.0-beta.1"
glob = "0.3.0"
toml = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "2.0.2"
curl = "0.4.29"
tar = "0.4.28"
thiserror = "1.0.19"
ctrlc = "3.1.4"
chrono = "0.4.11"
strip-ansi-escapes = "0.1.0"
regex = "1.3.9"
lazy_static = "1.4.0"
uuid = "0.8.1"
rand = "0.7.3"

dockurl = { path = "../dockurl" }
