[package]
name = "tfb_toolset"
version = "0.5.5"
authors = ["Mike Smith", "Nate Brady"]
edition = "2018"

[dependencies]
colored = "2.0.0"
clap = "3.0.0-beta.2"
glob = "0.3.0"
toml = "0.5.8"
serde_json = "1.0.61"
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0.1"
curl = "0.4.34"
tar = "0.4.30"
thiserror = "1.0.23"
ctrlc = "3.1.7"
chrono = "0.4.19"
strip-ansi-escapes = "0.1.0"
regex = "1.4.3"
lazy_static = "1.4.0"
uuid = "0.8.2"
rand = "0.8.2"
dockurl = "0.1.5"
#dockurl = { path = "../dockurl" }
